[gd_scene load_steps=4 format=3 uid="uid://budevoj6lw01k"]

[ext_resource type="Script" path="res://Scenes/UIScenes/level_menu.gd" id="1_slyr7"]
[ext_resource type="Texture2D" uid="uid://dmdujhdvjhh5y" path="res://Assets/UI/menu_background.png" id="2_frpj1"]
[ext_resource type="Texture2D" uid="uid://b71ugeyfchuag" path="res://Assets/UI/blue_button05.png" id="3_lb67w"]

[node name="LevelMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_slyr7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_frpj1")
expand_mode = 2

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 50
alignment = 1

[node name="GridContainer" type="GridContainer" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 20
columns = 3

[node name="Level1" type="TextureButton" parent="Margin/GridContainer"]
self_modulate = Color(0.564706, 0.980392, 0.564706, 1)
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_lb67w")
stretch_mode = 0

[node name="Label" type="Label" parent="Margin/GridContainer/Level1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Level 1
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level2" type="TextureButton" parent="Margin/GridContainer"]
self_modulate = Color(0.564706, 0.980392, 0.564706, 1)
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_lb67w")
stretch_mode = 0

[node name="Label" type="Label" parent="Margin/GridContainer/Level2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Level 2
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level3" type="TextureButton" parent="Margin/GridContainer"]
self_modulate = Color(0.564706, 0.980392, 0.564706, 1)
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_lb67w")
stretch_mode = 0

[node name="Label" type="Label" parent="Margin/GridContainer/Level3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Level 3
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="Margin/GridContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="Margin/GridContainer"]
layout_mode = 2

[node name="Back" type="TextureButton" parent="Margin/GridContainer"]
self_modulate = Color(0.564706, 0.980392, 0.564706, 1)
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_lb67w")
stretch_mode = 0

[node name="Label" type="Label" parent="Margin/GridContainer/Back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Back
"
horizontal_alignment = 1
vertical_alignment = 1
